k8s-yaml/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: task-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: mosrichard1234/taskmanager-backend
        ports:
        - containerPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: task-app
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
