k8s-yaml/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: task-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: mosrichard1234/taskmanager-frontend
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: task-app
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
